--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,103 +1,111 @@
 body {
-  font-family: "Noto Sans KR", sans-serif;
-  line-height: 1.6;
-  background-color: #ffff;
+	font-family: "Noto Sans KR", sans-serif;
+	line-height: 1.6;
+	background-color: #ffff;
 }
 
 #box {
-  display: flex;
-  justify-content: center;
-  padding-top:100px;
+	display: flex;
+	justify-content: center;
+	padding-top: 100px;
 }
+
 #container {
-  width: 100%;
-  max-width: 800px;
-  margin: auto;
-  background: #ffe8cf;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border: 1px solid #ddd;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+	width: 100%;
+	max-width: 800px;
+	margin: auto;
+	background: #ffe8cf;
+	padding: 20px;
+	border-radius: 12px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	border: 1px solid #ddd;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 #container-top {
-  display: flex;
-  flex-direction: column;
-  background-color: #d3c5b4;
-  border-radius: 16px;
-  align-items: center;
-  position: relative;
-  bottom: 60px;
-  width: 90%;
-  box-shadow: 0px 2px 4px #704708;
-  font-weight: bold;
+	display: flex;
+	flex-direction: column;
+	background-color: #d3c5b4;
+	border-radius: 16px;
+	align-items: center;
+	position: relative;
+	bottom: 60px;
+	width: 90%;
+	box-shadow: 0px 2px 4px #704708;
+	font-weight: bold;
 }
+
 #hostImg {
-  position: relative;
-  bottom: 40px;
+	position: relative;
+	bottom: 40px;
 }
 
 #hostName {
-  position: relative;
-  bottom: 40px;
+	position: relative;
+	bottom: 40px;
 }
+
 #membershipTitle {
-  position: relative;
-  bottom: 25px;
+	position: relative;
+	bottom: 25px;
 }
-#membershipTitle > h1 {
-  font-weight: bold;
-  font-size: 1.5rem;
+
+#membershipTitle>h1 {
+	font-weight: bold;
+	font-size: 1.5rem;
 }
 
 #info-container {
-  width: 100%;
-  padding: 20px;
+	width: 100%;
+	padding: 20px;
 }
 
 #mainImg {
-  width: 100%;
-  height: auto;
-  border-radius: 8px 8px 0px 0px;
-  margin: 0px;
+	width: 100%;
+	height: auto;
+	border-radius: 8px 8px 0px 0px;
+	margin: 0px;
 }
+
 #info-container {
-  line-height: 2;
+	line-height: 2;
 }
-#info-container > p > img {
-  max-width: 90%;
+
+#info-container>p>img {
+	max-width: 90%;
 }
+
 .user-img {
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  
+	border-radius: 50%;
+	width: 45px;
+	height: 45px;
 }
+
 .locTyBox {
 	font-size: 15px;
-  width: 600px;
-  padding: 20px;
+	width: 600px;
+	padding: 20px;
 }
-.locTyBox p{
-	padding-top:20px;
+
+.locTyBox p {
+	padding-top: 20px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.location{
+.location {
 	text-align: center;
 }
 
 .type {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
 
 .typeList {
@@ -108,255 +116,331 @@ body {
 	margin: 2px;
 	color: #666060;
 }
+
 .typeText {
-  padding: 1px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+	padding: 1px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 
 form {
-  margin-top: 20px;
+	
 }
-#comment-frm{
+
+#comment-frm {
 	max-width: 800px;
 	width: 100%;
+	border-bottom: 1px solid gray;
 }
 
 input[type="submit"] {
-  background-color: #fca311;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  text-transform: uppercase;
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+	background-color: #fca311;
+	color: #fff;
+	border: none;
+	padding: 10px 20px;
+	text-transform: uppercase;
+	font-weight: bold;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: background-color 0.3s ease;
 }
 
 input[type="submit"]:hover {
-  background-color: #e76f00;
+	background-color: #e76f00;
 }
 
 .update-form {
-  display: none;
+	display: none;
+	width: 100%;
 }
-.comment{
-	border: 1px solid #fca311;
-	
+
+.comment {
+	border-bottom: 1px solid gray;
+	padding-bottom: 5px;
 }
-.comment,
+
+.comment, .re-comment {
+	width: 100%;
+	max-width: 800px;
+	margin: 5px;
+}
+
 .re-comment {
-  padding: 8px;
-  width: 100%;
-  max-width:800px;
-  margin: 10px;
-  border-radius: 10px;
-  background-color: #e5e5e5;
-  
+	margin: 10px 0px;
 }
-.re-comment {
-  margin: 10px 0px;
-}
-.re-comment > .comment-head {
-  border-top: 2px dashed ;
-  margin-top: 10px;
-  padding-top: 5px;
+
+.re-comment>.comment-head {
+	border-top: 1px dashed;
+	padding-top: 5px;
 }
 
 div[id^="comment-box"] {
 	text-wrap: nowrap;
-    max-width: 800px;
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-}
-div[id^="recomment-box"] {
-  display: none;
+	max-width: 800px;
+	width: 100%; height : 60px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	height: 60px;
 }
 
-div[id^="comment-box"] > input {
-  height: 50%;
-  width: 100%;
-  margin: 5px;
+div[id^="recomment-box"] {
+	display: none;
+}
+
+div[id^="comment-box"]>input {
+	border-style: none;
+	border-bottom: 1px solid #bbbbbb;
+	display: flex;
+	width: 100%;
+	padding: 5px;
+	outline: none;
 }
 
 #comment-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 50px;
-}
-.comment-head {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 0 50px;
 }
 
-.comment-head > h1 {
-  font-weight: bold;
-  font-size: 1.2rem;
+.comment-head {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
 }
+
+.comment-head>h1 {
+	font-weight: bold;
+	font-size: 1.2rem;
+}
+
 .comment-text {
 	padding-left: 10px;
-  margin-bottom: 5px;
-}
-.btn {
-  background-color: #fca311;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  text-transform: uppercase;
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-.btn.active {
-  background-color: #14213d;
-  color: #fff;
-}
-button:hover {
-  background-color: #e76f00;
 }
 
-button > img {
-  width: 20px;
-  height: 15px;
-  margin: 0px;
-  padding: 0px;
+.commentNick {
+	padding-left: 10px;
+	font-weight: bold;
 }
+
+.nickCommentBox {
+	max-width: 550px;
+}
+
+.btn {
+	background-color: #fca311;
+	color: #fff;
+	border: none;
+	padding: 7px 10px;
+	text-transform: uppercase;
+	font-weight: bold;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: background-color 0.3s ease;
+	height: 30px;
+}
+
+.textBtnBox {
+	display: flex;
+	flex-flow: column;
+	align-items: end;
+}
+
+.textBtn {
+	display: inline-flex;
+	flex-flow: row-reverse;
+}
+
+.textBtn:nth-child(1) {
+	padding: 10px;
+}
+
+.btn.active {
+	background-color: #14213d;
+	color: #fff;
+}
+
+button:hover {
+	background-color: #e76f00;
+}
+
+button>img {
+	width: 20px;
+	height: 15px;
+	margin: 0px;
+	padding: 0px;
+}
+
 .recomment-box {
-  margin-left: 10px;
+	margin-left: 50px;
 }
+
 .prof {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
+
 .prof img {
-  width : 45px;
-  height: 45px;
+	width: 45px;
+	height: 45px;
 }
-#textboxBox{
+
+.profBox {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+}
+
+#textboxBox {
 	width: 100%
 }
 
-#textbox{
-    border-style: none;
-    border-bottom: 1px solid #bbbbbb;
-    display: flex;
-    width: 100%;
-    padding : 5px;
-    outline: none;
-}
-#textbox > button {
+#textbox {
+	border-style: none;
+	border-bottom: 1px solid #bbbbbb;
+	display: flex;
+	width: 100%;
+	padding: 5px;
+	outline: none;
 }
 
+#textbox>button {
+	
+}
 
-.comment > p {
-  padding: 10px;
+.comment>p {
+	padding: 10px;
 }
 
 #hostInfo {
-  display: flex;
-  flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
+
 #hostInfo-img {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  bottom: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	bottom: 10px;
 }
 
 .host-user-img {
-  margin: 0px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+	margin: 0px;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
 }
 
 #middle-container-top {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 #middle-container {
-  width: 100%;
-  padding: 20px;
+	width: 100%;
+	padding: 20px;
 }
 
 #name-and-info {
-  margin-left: 20px;
+	margin-left: 20px;
 }
 
 #hostInfo-name {
-  margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
-#together > p {
-  margin-top: 20px;
+#together>p {
+	margin-top: 20px;
 }
+
 #imageContainer {
-  margin-top: 20px;
+	margin-top: 20px;
 }
+
 #asd {
-  text-align: center;
-  padding: 5px;
-  margin-bottom: 3px;
-  width: 100%;
-  border-bottom: 2px dashed;
+	text-align: center;
+	padding: 5px;
+	margin-bottom: 3px;
+	width: 100%;
+	border-bottom: 2px dashed;
 }
 
 .image-container {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  position: relative;
-  overflow: hidden; /* 컨테이너의 범위를 넘는 요소를 숨김 */
-  width: 600px; /* 컨테이너의 너비 조정 */
+	display: flex;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	position: relative;
+	overflow: hidden; /* 컨테이너의 범위를 넘는 요소를 숨김 */
+	width: 600px; /* 컨테이너의 너비 조정 */
 }
 
 .image-item {
-  position: relative;
-  width: 50px; /* 이미지의 너비 */
+	position: relative;
+	width: 50px; /* 이미지의 너비 */
 }
 
 .image-item img {
-  margin: 0;
+	margin: 0;
 }
 
 .allmemberImg {
-  display: block;
-  width: 100%; /* 이미지의 너비를 li 요소에 맞춤 */
-  height: 50px;
-  border-radius: 50%;
+	display: block;
+	width: 100%; /* 이미지의 너비를 li 요소에 맞춤 */
+	height: 50px;
+	border-radius: 50%;
 }
 
 .image-item:not(:first-child) {
-  margin-left: -20px; /* 겹치는 정도 조절 */
+	margin-left: -20px; /* 겹치는 정도 조절 */
 }
 
 #last-item {
-  position: relative;
+	position: relative;
 }
 
-#last-img,
-#last-img2 {
-  position: absolute;
+#last-img, #last-img2 {
+	position: absolute;
 }
 
 #last-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+/* 09 06 채승훈 */
+.textBoxImg {
+	width: 100%;
+	display: grid;
+}
+
+.textBoxImg input {
+	border-style: none;
+	border-bottom: 1px solid #bbbbbb;
+	display: flex;
+	width: 100%;
+	padding: 5px;
+	outline: none;
+}
+
+.text-update-box {
+	display: grid;
+	width: 100%;
+	margin: 10px;
+}
+
+.text-update-box>input {
+	border: none;
+	border-bottom: 1px solid gray;
+	padding: 5px;
 }
