--- a/src/main/resources/static/css/meetingDetail.css
+++ b/src/main/resources/static/css/meetingDetail.css
@@ -1,177 +1,319 @@
-.user-img {
-	width: 30px;
-	height: 30px;
-	border-radius: 50%
-}
-form {
-  margin-top: 20px;
-}
-#comment-frm{
-	max-width: 1280px;
+
+#comment-frm {
+	max-width: 800px;
 	width: 100%;
+	border-bottom: 1px solid gray;
 }
 
 input[type="submit"] {
-  background-color: #fca311;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  text-transform: uppercase;
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+	background-color: #fca311;
+	color: #fff;
+	border: none;
+	padding: 10px 20px;
+	text-transform: uppercase;
+	font-weight: bold;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: background-color 0.3s ease;
 }
 
 input[type="submit"]:hover {
-  background-color: #e76f00;
+	background-color: #e76f00;
 }
 
 .update-form {
-  display: none;
+	display: none;
+	width: 100%;
 }
-.comment{
-	border: 1px solid #fca311;
-	
+
+.comment {
+	border-bottom: 1px solid gray;
+	padding-bottom: 5px;
 }
-.comment,
+
+.comment, .re-comment {
+	width: 100%;
+	max-width: 800px;
+	margin: 5px;
+}
+
 .re-comment {
-  padding: 8px;
-  width: 100%;
- max-width: 1280px;
-  margin: 10px;
-  border-radius: 10px;
-  background-color: #e5e5e5;
-  
+	margin: 10px 0px;
 }
-.re-comment {
-  margin: 10px 0px;
-}
-.re-comment > .comment-head {
-  border-top: 2px dashed ;
-  margin-top: 10px;
-  padding-top: 5px;
+
+.re-comment>.comment-head {
+	border-top: 1px dashed;
+	padding-top: 5px;
 }
 
 div[id^="comment-box"] {
 	text-wrap: nowrap;
-	border: 1px solid #fca311;
-    border-radius: 10px;
-    max-width: 1280px;
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: space-between;
-  padding: 8px;
-  align-items: center;
-  background-color: #e5e5e5;
-  margin-top: 10px;
+	max-width: 800px;
+	width: 100%; height : 60px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	height: 60px;
 }
+
 div[id^="recomment-box"] {
-  display: none;
+	display: none;
 }
 
-div[id^="comment-box"] > input {
-  height: 50%;
-  width: 100%;
-
-  margin: 5px;
+div[id^="comment-box"]>input {
+	border-style: none;
+	border-bottom: 1px solid #bbbbbb;
+	display: flex;
+	width: 100%;
+	padding: 5px;
+	outline: none;
 }
 
 #comment-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 50px;
-}
-.comment-head {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 0 50px;
 }
 
-.comment-head > h1 {
-  font-weight: bold;
-  font-size: 1.2rem;
+.comment-head {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
 }
+
+.comment-head>h1 {
+	font-weight: bold;
+	font-size: 1.2rem;
+}
+
 .comment-text {
 	padding-left: 10px;
-  margin-bottom: 5px;
-}
-.btn {
-  background-color: #fca311;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  text-transform: uppercase;
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-.btn.active {
-  background-color: #14213d;
-  color: #fff;
-}
-.btn:hover {
-  background-color: #e76f00;
 }
 
-button > img {
-  width: 20px;
-  height: 15px;
-  margin: 0px;
-  padding: 0px;
+.commentNick {
+	padding-left: 10px;
+	font-weight: bold;
 }
+
+.nickCommentBox {
+	max-width: 550px;
+}
+
+.btn {
+	background-color: #fca311;
+	color: #fff;
+	border: none;
+	padding: 7px 10px;
+	text-transform: uppercase;
+	font-weight: bold;
+	cursor: pointer;
+	border-radius: 5px;
+	transition: background-color 0.3s ease;
+	height: 30px;
+}
+
+.textBtnBox {
+	display: flex;
+	flex-flow: column;
+	align-items: end;
+}
+
+.textBtn {
+	display: inline-flex;
+	flex-flow: row-reverse;
+}
+
+.textBtn:nth-child(1) {
+	padding: 10px;
+}
+
+.btn.active {
+	background-color: #14213d;
+	color: #fff;
+}
+
+button:hover {
+	background-color: #e76f00;
+}
+
+button>img {
+	width: 20px;
+	height: 15px;
+	margin: 0px;
+	padding: 0px;
+}
+
 .recomment-box {
-  margin-left: 10px;
+	margin-left: 50px;
 }
+
 .prof {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
+
 .prof img {
-  margin: 0;
-  margin-left: 10px;
+	width: 45px;
+	height: 45px;
 }
-#textbox > button {
-  height: 50%;
+
+.profBox {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
 }
-.comment > p {
-  padding: 10px;
+
+#textboxBox {
+	width: 100%
 }
-.prof {
-  display: flex;
-  align-items: center;
+
+#textbox {
+	border-style: none;
+	border-bottom: 1px solid #bbbbbb;
+	display: flex;
+	width: 100%;
+	padding: 5px;
+	outline: none;
 }
-.prof img {
-  margin: 0;
-  margin-left: 5px;
+
+#textbox>button {
+	
 }
-#textbox > button {
-  height: 50%;
-}
-.comment > p {
-  padding: 10px;
+
+.comment>p {
+	padding: 10px;
 }
 
 #hostInfo {
-  display: flex;
-  flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
+
 #hostInfo-img {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  bottom: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	bottom: 10px;
 }
 
+.host-user-img {
+	margin: 0px;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+}
 
+#middle-container-top {
+	margin-bottom: 20px;
+}
 
+#middle-container {
+	width: 100%;
+	padding: 20px;
+}
 
+#name-and-info {
+	margin-left: 20px;
+}
+
+#hostInfo-name {
+	margin-bottom: 10px;
+}
+
+#together>p {
+	margin-top: 20px;
+}
+
+#imageContainer {
+	margin-top: 20px;
+}
+
+#asd {
+	text-align: center;
+	padding: 5px;
+	margin-bottom: 3px;
+	width: 100%;
+	border-bottom: 2px dashed;
+}
+
+.image-container {
+	display: flex;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	position: relative;
+	overflow: hidden; /* 컨테이너의 범위를 넘는 요소를 숨김 */
+	width: 600px; /* 컨테이너의 너비 조정 */
+}
+
+.image-item {
+	position: relative;
+	width: 50px; /* 이미지의 너비 */
+}
+
+.image-item img {
+	margin: 0;
+}
+
+.allmemberImg {
+	display: block;
+	width: 100%; /* 이미지의 너비를 li 요소에 맞춤 */
+	height: 50px;
+	border-radius: 50%;
+}
+
+.image-item:not(:first-child) {
+	margin-left: -20px; /* 겹치는 정도 조절 */
+}
+
+#last-item {
+	position: relative;
+}
+
+#last-img, #last-img2 {
+	position: absolute;
+}
+
+#last-img {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+/* 09 06 채승훈 */
+.textBoxImg {
+	width: 100%;
+	display: grid;
+}
+
+.textBoxImg input {
+	border-style: none;
+	border-bottom: 1px solid #bbbbbb;
+	display: flex;
+	width: 100%;
+	padding: 5px;
+	outline: none;
+}
+
+.text-update-box {
+	display: grid;
+	width: 100%;
+	margin: 10px;
+}
+
+.text-update-box>input {
+	border: none;
+	border-bottom: 1px solid gray;
+	padding: 5px;
+}
 
 
 body {
@@ -188,7 +330,7 @@ body {
 }
 #container {
   width: 100%;
-  max-width: 1280px;
+  max-width: 800px;
   /*08-29 채승훈 마진겹칩현상? 때문에 20px 뺌*/
   margin: auto;
   padding-bottom: 10px;
