--- a/src/main/resources/static/css/headerIndex.css
+++ b/src/main/resources/static/css/headerIndex.css
@@ -66,9 +66,7 @@
   color: #fca35b;
   font-family: "Do Hyeon", sans-serif;
   padding-right: 15px;
-}
-
-.main_header_right_menu {
+  font-size: 1.7rem;
 }
 
 .main_header_right_nickname {
