--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -35,18 +35,62 @@ body {
 	color: #a4161a;
 }
 
-.fc .fc-toolbar-title {
+.fc.fc-toolbar-title {
 	font-size: 1.5rem;
 	margin: 0px;
+}
+
+.fa-solid.fa-screwdriver-wrench {
+	font-size: 1.2rem;
+	color: blue;
+}
+
+.fa-solid.fa-user-tie {
+	font-size: 1.2rem;
+}
+
+.fa-solid.fa-lock {
+	font-size: 2rem;
 }
 
 input[type=text] {
 	width: 100%;
 	height: 30px;
 	font-size: 1rem;
-	border: 0;
+	border: 2px solid black;
 	border-radius: 10px;
 	background-color: rgb(233, 233, 233);
+}
+
+input[type=password] {
+	width: 100%;
+	height: 30px;
+	font-size: 1rem;
+	border: 2px solid black;
+	border-radius: 10px;
+	background-color: rgb(233, 233, 233);
+}
+
+.box {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	padding-top: 120px;
+}
+
+.container {
+	width: 100%;
+	max-width: 800px;
+	margin: auto;
+	padding: 15px;
+	border-radius: 12px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+	background-color: #FFE8CF;
+	margin-bottom: 20px;
 }
 
 .form-control {
@@ -81,13 +125,6 @@ input[type=text] {
 	display: block;
 }
 
-.box {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	padding-top: 120px;
-}
-
 .club-button {
 	display: flex;
 	align-items: center;
@@ -97,24 +134,8 @@ input[type=text] {
 	width: 90%;
 }
 
-/* 정보 컨테이너 */
-.container {
-	width: 100%;
-	max-width: 800px;
-	margin: auto;
-	padding: 15px;
-	border-radius: 12px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	background-color: #FFE8CF;
-	margin-bottom: 20px;
-}
-
 .profile {
-	font-size: 1.5rem;
+	font-size: 2rem;
 	font-weight: bolder;
 	padding-top: 20px;
 	padding-bottom: 20px;
@@ -133,6 +154,8 @@ input[type=text] {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	padding-bottom: 25px;
+	padding-top: 25px;
 }
 
 .profile_img img {
@@ -226,8 +249,10 @@ input[type=text] {
 	display: flex;
 	align-items: center;
 	border-bottom: 1px solid #ddd;
-	padding: 10px;
-	margin-bottom: 10px;
+	padding: 20px;
+	margin-bottom: 20px;
+	justify-content: space-around;
+	width: 100%;
 }
 
 .membership-card {
@@ -238,7 +263,7 @@ input[type=text] {
 	border: 1px solid #ddd;
 	border-radius: 8px;
 	background-color: #f9f9f9;
-	margin-bottom: 20px;
+	margin-bottom: 50px;
 	overflow: hiddlen;
 	white-space: nowrap;
 }
@@ -251,11 +276,11 @@ input[type=text] {
 }
 
 .membership-img {
-	width: 100px;
-	height: 100px;
+	width: 130px;
+	height: 130px;
 	object-fit: cover;
 	border-radius: 8px;
-	border: 2px solid #ddd;
+	border: 2px solid #14213D;
 }
 
 .membership-create {
@@ -266,27 +291,41 @@ input[type=text] {
 	margin-bottom: 20px;
 }
 
-.membership-each {
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-}
-
 .membership-String {
 	display: flex;
 	flex-direction: column;
+	max-width: 770px;
 	width: 400px;
+	height: 150px;
+	justify-content: space-around;
 }
 
 .membership-String h4 {
-	padding-bottom: 20px;
 	font-size: 1.2rem;
 	font-weight: bolder;
 }
 
 .membership-String p {
-	padding-bottom: 20px;
 	white-space: nowrap;
+}
+
+.member-grade {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	font-weight: bolder;
+}
+
+.member-grade h4 {
+	padding-right: 10px;
+	color: blue;
+	font-size: 1.3rem;
+}
+
+.member-grade h5 {
+	padding-right: 10px;
+	color: #E76F00;
+	font-size: 1.3rem;
 }
 
 .membership-text {
@@ -300,6 +339,32 @@ input[type=text] {
 	line-height: 30px;
 }
 
+.membership-count {
+	display: flex;
+	width: 80px;
+	justify-content: space-between;
+}
+
+.Management-button-group {
+	display: flex;
+	flex-direction: row;
+}
+
+.Management-button {
+	background-color: #14213D;
+	color: white;
+	border: none;
+	border-radius: 6px;
+	width: 150px;
+	height: 40px;
+	font-size: 1rem;
+	font-weight: bolder;
+	margin-right: 10px;
+}
+
+.Management-button:hover {
+	background-color: #9a8c98;
+}
 /* 버튼 스타일 */
 #submit {
 	display: flex;
@@ -373,11 +438,13 @@ input[type=text] {
 	color: white;
 	border: none;
 	border-radius: 6px;
-	width: 150px;
+	width: 120px;
 	height: 40px;
 	font-size: 1rem;
 	font-weight: bolder;
 	margin-right: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
 .btn:hover {
@@ -418,13 +485,6 @@ input[type=text] {
 	height: 0%;
 }
 
-#menu {
-	flex-direction: row;
-	overflow: hidden;
-	transition: 0.5s ease-in-out;
-	width: 100%;
-}
-
 #icon {
 	display: flex;
 	justify-content: center;
@@ -433,22 +493,57 @@ input[type=text] {
 }
 
 #icon h1 {
+	display: flex;
+	justify-content: center;
 	font-size: 1.5rem;
 	font-weight: bolder;
+	padding-top: 50px;
+	font-size: 1.5rem;
+}
+/* ========== host-Management-section =========*/
+.host-Management-title {
+	display: flex;
 }
 
 .host-Management-section {
 	width: 90%;
 	max-width: 800px;
 	margin: auto;
-	padding: 15px;
+	padding: 35px;
 	border-radius: 12px;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	background-color: #F9F9F9;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+	background-color: #E5E5E5;
 	margin-bottom: 30px;
+}
+
+.host-Management-section h1 {
+	font-size: 1.2rem;
+	font-weight: bolder;
+	padding-bottom: 15px;
+	padding-right: 10px;
+}
+
+.host-Management-section h2 {
+	padding-bottom: 20px;
+	font-size: 1.2rem;
+	font-weight: bolder;
+}
+
+.host-Management-text>* {
+	padding-bottom: 10px;
+}
+
+.host-Management-count {
+	display: flex;
+	width: 80px;
+	justify-content: space-between;
+}
+
+.host-Management-count>* {
+	padding-right: 10px;
 }
 
 .host_text {
@@ -468,25 +563,41 @@ input[type=text] {
 	padding-bottom: 10px;
 }
 
-.host_a {
+.host-management-input {
 	display: flex;
-	align-items: center;
-	padding: 10px;
-	margin-bottom: 10px;
-}
-
-.host-pwdCheck {
+	flex-direction: row;
 	width: 100%;
-	height: 20%;
-	display: flex;
-	justify-content: flex-start;
 }
 
 #pwdCheck {
-	width: 200px;
-	border: 0;
+	width: 70%;
+	height: 40px;
 	border-radius: 10px;
 	background-color: rgb(233, 233, 233);
-	margin-left: 10px;
 	margin-right: 10px;
+	margin-bottom: 20px;
+	padding-left: 20px;
+}
+
+.create-menu {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: row;
+	width: 70%;
+}
+
+.create-btn {
+	width: 100%;
+	background-color: #FFA500;
+	color: white;
+	padding: 15px 50px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-weight: bolder;
+}
+
+.create-btn:hover {
+	background-color: #E76F00;
 }
