--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -253,6 +253,7 @@ input[type=password] {
 	margin-bottom: 20px;
 	justify-content: space-around;
 	width: 100%;
+	max-width: 800px;
 }
 
 .membership-card {
