--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -90,6 +90,8 @@ body {
   padding: 5px;
   color: white;
   box-shadow: 0px 1px 2px gray;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .membership-info > h2 {
