--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -61,13 +61,17 @@ body {
 #info-container {
 	width: 100%;
 	padding: 20px;
+	background-color: white;
 }
 
 #mainImg {
-	width: 100%;
-	height: auto;
+	height: 100%;
+    max-height: 450px;
+    max-width: 800px;
+    width: 100%;
 	border-radius: 8px 8px 0px 0px;
 	margin: 0px;
+ 	background-size: cover;
 }
 
 #info-container {
@@ -455,5 +459,14 @@ button>img {
 .text-update-box>input {
 	border: none;
 	border-bottom: 1px solid gray;
+	padding: 5px;
+}
+
+.location {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.locationText{
 	padding: 5px;
 }
