--- a/src/main/resources/static/css/management.css
+++ b/src/main/resources/static/css/management.css
@@ -18,16 +18,17 @@ height: 100%;
 }
 table {
   border: 1px #a39485 solid;
-  font-size: .9em;
+  font-size: 1.3rem;
   box-shadow: 0 2px 5px rgba(0,0,0,.25);
   width: 100%;
   border-collapse: collapse;
   border-radius: 5px;
   overflow: hidden;
+  font-family: "Do Hyeon", sans-serif;
 }
 
 th {
-  text-align: left;
+  text-align: center;
 }
   
 thead {
@@ -37,13 +38,20 @@ thead {
 }
   
  td, th {
-  padding: 1em .5em;
+  padding: 2px;
   vertical-align: middle;
+  height: 50px;
+  
 }
   
+  .btn:hover{
+  background: #E76F00;
+  
+  }
  td {
   border-bottom: 1px solid rgba(0,0,0,.1);
   background: #fff;
+  text-align: center;
 }
 
 a {
@@ -97,13 +105,45 @@ a {
 
 .buttones{
 display: flex;
+align-items: center;
 
 }
 
 
 .btn{
 width: 80px;
-height: 40px;
-margin-left: 5px;
+    height: 30px;
+    border: none;
+    margin: 5px;
+    border-radius: 3px;
+    font-family: "Do Hyeon", sans-serif;
+    font-size:1.2rem;
+    cursor: pointer;
+}
+.last{
+	
+	width: 300px;
+}
+.gender, .grade{
+	background: beige;
+}
+tbody tr {
+	background: beige;
 }
 
+[data-value="admin"] {
+    background: #fca311;
+    color:black;
+}
+[data-value="delete"] {
+    background:#fca311;
+     color:black;
+}
+[data-value="host"] {
+    background: #fca311;
+     color:black;
+}
+[data-value="regular"] {
+    background: #fca311;
+     color:black;
+}
