--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -124,7 +124,9 @@ body {
   font-size: 12px;
   width: 100%;
 }
-
+.locationList{
+	padding: 0px 2px;
+}
 .type {
   display: flex;
   width: 100%;
