--- a/src/main/resources/static/css/meetingDetail.css
+++ b/src/main/resources/static/css/meetingDetail.css
@@ -104,7 +104,7 @@ div[id^="comment-box"] > input {
   max-width: 550px;
 }
 
-.btn-com ,.btn-com-del{
+.btn {
   background-color: #fca311;
   color: #fff;
   border: none;
@@ -115,9 +115,6 @@ div[id^="comment-box"] > input {
   border-radius: 5px;
   transition: background-color 0.3s ease;
   height: 30px;
-}
-.btn-com-del{
-	margin-left: 5px;
 }
 
 .textBtnBox {
@@ -140,7 +137,9 @@ div[id^="comment-box"] > input {
   color: #fff;
 }
 
-
+button:hover {
+  background-color: #e76f00;
+}
 
 button > img {
   width: 20px;
@@ -518,9 +517,6 @@ body {
   color: #ffffff; /* 텍스트 색상 */
 }
 
-.btn-com:hover , .btn-com-del:hover {
-	background-color: #e76f00;
-}
 #buttones {
   display: flex;
   width: 100%;
@@ -543,5 +539,6 @@ body {
   border: none;
   color: white;
   border-radius: 5px;
+  margin-top: 35px;
   margin-left: 5px;
 }
